--- a/scripts/m_burns_cap_scrape.ipynb
+++ b/scripts/m_burns_cap_scrape.ipynb
@@ -32568,7 +32568,7 @@
    "execution_count": 115,
    "id": "7a61487a",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -32661,6 +32661,14 @@
    "source": [
     "cma_winner_count.to_csv('../data/cma_winner_count.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47cd91a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
